index html added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>To-Do-List</title>
 </head>
 <body>
+    <div class="container">
+        <h1 id="heading">To-do List</h1>
+        <div class="input">
+            <button id="sortbtn">Sort Tasks</button>
+            <input type="text" id="todo-input" placeholder="Enter task here...">
+            <button id="addbtn">Add Tasks</button>
+        </div>
+        <div class="output">
+            <ul id="taskList">
+
+            </ul>
+        </div>
     <script src="./script/code.js"></script>
 </body>
 </html>
